--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.34.1",
-    "@iconify-json/ph": "^1.1.3",
+    "@iconify-json/octicon": "^1.1.30",
     "@tauri-apps/cli": "^1.2.2",
     "@types/node": "^18.7.10",
     "@vitejs/plugin-vue": "^4.0.0",
