--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,8 +16,10 @@ tauri-build = { version = "1.2", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.2", features = ["macos-private-api", "shell-open", "system-tray"] }
+tauri = { version = "1.2", features = ["dialog-message", "macos-private-api", "shell-open", "system-tray"] }
 window-vibrancy = "0.3.2"
+once_cell = "1.17.0"
+rocket = "0.4.11"
 
 [features]
 # by default Tauri runs in production mode
