--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,8 +18,9 @@ serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.2", features = ["dialog-message", "macos-private-api", "shell-open", "system-tray"] }
 window-vibrancy = "0.3.2"
-once_cell = "1.17.0"
-rocket = "0.4.11"
+tiny_http = "0.12.0"
+typed-html = { git = "https://github.com/bodil/typed-html", rev = "4c13ecca" }
+ascii = "1.1.0"
 
 [features]
 # by default Tauri runs in production mode
