--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,7 +16,7 @@ tauri-build = { version = "1.2", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.2", features = ["dialog-message", "macos-private-api", "shell-open", "system-tray"] }
+tauri = { version = "1.2", features = ["dialog-message", "macos-private-api", "process-exit", "shell-open", "system-tray"] }
 window-vibrancy = "0.3.2"
 tiny_http = "0.12.0"
 typed-html = { git = "https://github.com/bodil/typed-html", rev = "4c13ecca" }
