--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tauri-apps/api": "^1.2.0",
+    "howler": "^2.2.3",
     "pinia": "^2.0.29",
     "vue": "^3.2.45"
   },
@@ -18,6 +19,7 @@
     "@antfu/eslint-config": "^0.34.1",
     "@iconify-json/octicon": "^1.1.30",
     "@tauri-apps/cli": "^1.2.2",
+    "@types/howler": "^2.2.7",
     "@types/node": "^18.7.10",
     "@vitejs/plugin-vue": "^4.0.0",
     "eslint": "^8.32.0",
