--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,6 +22,7 @@ tiny_http = "0.12.0"
 typed-html = { git = "https://github.com/bodil/typed-html", rev = "4c13ecca" }
 ascii = "1.1.0"
 rodio = "0.16.0"
+tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
 
 [features]
 # by default Tauri runs in production mode
