Add auth & persistent db

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tauri-apps/api": "^1.2.0",
     "pinia": "^2.0.29",
+    "redaxios": "^0.5.1",
     "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store",
     "vue": "^3.2.45"
   },
@@ -21,6 +22,7 @@
     "@tauri-apps/cli": "^1.2.2",
     "@types/node": "^18.7.10",
     "@vitejs/plugin-vue": "^4.0.0",
+    "async-mutex": "^0.4.0",
     "eslint": "^8.32.0",
     "sass": "^1.57.1",
     "typescript": "^4.6.4",
