--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "run-p vite:dev devtools",
+    "vite:dev": "vite",
+    "devtools": "vue-devtools",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "tauri": "tauri"
@@ -22,8 +24,10 @@
     "@tauri-apps/cli": "^1.2.2",
     "@types/node": "^18.7.10",
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/devtools": "^6.5.0",
     "async-mutex": "^0.4.0",
     "eslint": "^8.32.0",
+    "npm-run-all": "^4.1.5",
     "sass": "^1.57.1",
     "typescript": "^4.6.4",
     "unplugin-icons": "^0.15.2",
