--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,8 +8,7 @@ on:
 jobs:
   release:
     runs-on: macos-latest
-    permissions:
-      repository-projects: write
+    permissions: write-all
     name: Release
     steps:
       - name: Checkout repository
