--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,38 +22,23 @@ jobs:
         with:
           node-version: '16'
 
-      - name: Check version changes
-        uses: EndBug/version-check@v1
-        id: check
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-
-
-      - name: Setup | Rust
-        if: steps.check.outputs.changed == 'true'
-        uses: ATiltedTree/setup-rust@v1
-        with:
-          rust-version: 1.67.0
-
       - uses: pnpm/action-setup@v2
-        if: steps.check.outputs.changed == 'true'
         name: Install pnpm
-        id: pnpm-install
         with:
           version: latest
+      
+      - name: Create ENV
+        run: pnpx tsx .github/actions/env.ts
+        
 
-      - name: Install tsx
-        if: steps.check.outputs.changed == 'true'
-        run: pnpm install tsx
+      - name: install Rust stable
+        uses: dtolnay/rust-toolchain@stable
 
-      - name: Run file
-        if: steps.check.outputs.changed == 'true'
-        run: pnpx tsx ./actions/release.ts
+      - uses: tauri-apps/tauri-action@v0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Publish package to NPM
-        if: steps.check.outputs.changed == 'true'
-        run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        with:
+          tagName: gitification-v__VERSION__
+          releaseName: 'Gitification v__VERSION__'
+          prerelease: false
+          args: --target universal-apple-darwin
