--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint": "^8.32.0",
     "npm-run-all": "^4.1.5",
     "sass": "^1.57.1",
+    "tsx": "^3.12.3",
     "typescript": "^4.6.4",
     "unplugin-icons": "^0.15.2",
     "vite": "^4.0.0",
