--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,7 @@ jobs:
         name: Install pnpm
         with:
           version: latest
+          run_install: true 
       
       - name: install Rust stable
         uses: dtolnay/rust-toolchain@stable
