--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@vue/devtools": "^6.5.0",
     "async-mutex": "^0.4.0",
     "eslint": "^8.32.0",
+    "execa": "^6.1.0",
     "npm-run-all": "^4.1.5",
     "sass": "^1.57.1",
     "tsx": "^3.12.3",
