--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@tauri-apps/api": "^1.2.0",
+    "@vueuse/core": "^9.12.0",
     "pinia": "^2.0.29",
     "redaxios": "^0.5.1",
     "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store",
@@ -32,6 +33,8 @@
     "async-mutex": "^0.4.0",
     "eslint": "^8.32.0",
     "execa": "^6.1.0",
+    "focus-visible": "^5.2.0",
+    "hotkeys-js": "^3.10.1",
     "npm-run-all": "^4.1.5",
     "sass": "^1.57.1",
     "tsx": "^3.12.3",
