--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vueuse/core": "^9.12.0",
     "pinia": "^2.0.29",
     "redaxios": "^0.5.1",
+    "tauri-plugin-autostart-api": "github:tauri-apps/tauri-plugin-autostart",
     "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store",
     "vue": "^3.2.45"
   },
