--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,6 +44,9 @@ jobs:
 
       - name: Install dependencies
         run: pnpm install 
+
+      - name: Check version change
+        run: pnpx tsx .github/actions/version.ts
       
       - name: install Rust stable
         uses: dtolnay/rust-toolchain@stable
