Remove unused, remove workflow auto run

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,12 +1,9 @@
 name: Release
 
-# I use npm to store app version.
-# When a new version is created
 
 on:
   push:
-    branches:
-      - main
+    branches: []
 
 jobs:
   release:
