--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tauri-apps/api": "^1.2.0",
     "@vueuse/core": "^9.12.0",
+    "compare-versions": "6.0.0-rc.1",
     "dayjs": "^1.11.7",
     "pinia": "^2.0.29",
     "redaxios": "^0.5.1",
