Activate narrow type inline handlers

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,8 @@
     "skipLibCheck": true
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", ".github/**/*.ts"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "references": [{ "path": "./tsconfig.node.json" }],
+  "vueCompilerOptions": {
+    "narrowingTypesInInlineHandlers": true
+  }
 }
