--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "gitification"
-version = "0.0.0"
-description = "A Tauri App"
-authors = ["you"]
+version = "0.4.0"
+description = "View github notifications on menubar"
+authors = ["Kadir Yazıcı"]
 license = ""
 repository = ""
 edition = "2021"
