--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "package.json"
   ],
   "devDependencies": {
+    "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
     "@antfu/eslint-config": "^0.34.1",
     "@iconify-json/octicon": "^1.1.30",
