--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vueuse/core": "^9.12.0",
     "compare-versions": "6.0.0-rc.1",
     "dayjs": "^1.11.7",
+    "p-all": "^4.0.0",
     "pinia": "^2.0.29",
     "redaxios": "^0.5.1",
     "tauri-plugin-autostart-api": "github:tauri-apps/tauri-plugin-autostart",
@@ -31,6 +32,7 @@
     "@actions/github": "^5.1.1",
     "@antfu/eslint-config": "^0.34.1",
     "@iconify-json/octicon": "^1.1.30",
+    "@iconify-json/ph": "^1.1.4",
     "@tauri-apps/cli": "^1.2.2",
     "@types/node": "^18.7.10",
     "@vitejs/plugin-vue": "^4.0.0",
