--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "redaxios": "^0.5.1",
     "tauri-plugin-autostart-api": "github:tauri-apps/tauri-plugin-autostart",
     "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store",
-    "vue": "^3.2.45"
+    "vue": "^3.3.4",
+    "vue-selectable-items": "^1.0.0",
+    "wowerlay": "1.0.0-beta.4"
   },
   "files": [
     "README.md",
