Revert "Convert settings button to menu button"
This reverts commit 9588bc7bc8948a8c810552ad330e4352d37a1157.

--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
     "redaxios": "^0.5.1",
     "tauri-plugin-autostart-api": "github:tauri-apps/tauri-plugin-autostart",
     "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store",
-    "vue": "^3.3.4",
-    "vue-selectable-items": "^1.0.0",
-    "wowerlay": "1.0.0-beta.4"
+    "vue": "^3.2.45"
   },
   "files": [
     "README.md",
