--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "tauri-plugin-autostart-api": "github:tauri-apps/tauri-plugin-autostart",
     "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store",
     "vue": "^3.3.4",
-    "vue-selectable-items": "^1.0.0",
+    "vue-selectable-items": "^1.0.1",
     "wowerlay": "1.0.0-beta.10"
   },
   "files": [
@@ -32,7 +32,7 @@
   "devDependencies": {
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
-    "@antfu/eslint-config": "^0.34.1",
+    "@antfu/eslint-config": "^0.39.5",
     "@iconify-json/octicon": "^1.1.30",
     "@iconify-json/ph": "^1.1.4",
     "@tauri-apps/cli": "^1.2.2",
@@ -40,7 +40,8 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/devtools": "^6.5.0",
     "async-mutex": "^0.4.0",
-    "eslint": "^8.32.0",
+    "eslint": "^8.38.0",
+    "eslint-plugin-unicorn": "^47.0.0",
     "execa": "^6.1.0",
     "focus-visible": "^5.2.0",
     "hotkeys-js": "^3.10.1",
