--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,8 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
+      - name: install pnpm
+        run: npm install -g pnpm@8.6.0
       - name: install frontend dependencies
         run: pnpm install
       - uses: tauri-apps/tauri-action@v0
