Disable prerelease option

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,5 +52,5 @@ jobs:
           tagName: __VERSION__ 
           releaseName: '__VERSION__'
           releaseDraft: false
-          prerelease: true
+          prerelease: false
           args: ${{ steps.set-args.outputs.result }}
