--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gitification",
-  "version": "1.1.0",
+  "version": "0.5.0",
   "type": "module",
   "scripts": {
     "dev": "run-p vite:dev devtools",
@@ -14,15 +14,14 @@
   "dependencies": {
     "@tauri-apps/api": "^1.2.0",
     "@vueuse/core": "^9.12.0",
+    "compare-versions": "6.0.0-rc.1",
     "dayjs": "^1.11.7",
     "p-all": "^4.0.0",
     "pinia": "^2.0.29",
     "redaxios": "^0.5.1",
     "tauri-plugin-autostart-api": "github:tauri-apps/tauri-plugin-autostart",
     "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store",
-    "vue": "^3.3.4",
-    "vue-selectable-items": "^1.0.1",
-    "wowerlay": "1.0.0-beta.10"
+    "vue": "^3.2.45"
   },
   "files": [
     "README.md",
@@ -31,7 +30,7 @@
   "devDependencies": {
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
-    "@antfu/eslint-config": "^0.39.5",
+    "@antfu/eslint-config": "^0.34.1",
     "@iconify-json/octicon": "^1.1.30",
     "@iconify-json/ph": "^1.1.4",
     "@tauri-apps/cli": "^1.2.2",
@@ -39,8 +38,7 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/devtools": "^6.5.0",
     "async-mutex": "^0.4.0",
-    "eslint": "^8.38.0",
-    "eslint-plugin-unicorn": "^47.0.0",
+    "eslint": "^8.32.0",
     "execa": "^6.1.0",
     "focus-visible": "^5.2.0",
     "hotkeys-js": "^3.10.1",
