--- a/package.json
+++ b/package.json
@@ -24,15 +24,13 @@
     "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store",
     "vue": "^3.3.4",
     "vue-selectable-items": "^1.0.1",
-    "wowerlay": "1.0.0-beta.10"
+    "wowerlay": "1.0.2"
   },
   "files": [
     "README.md",
     "package.json"
   ],
   "devDependencies": {
-    "@actions/core": "^1.10.0",
-    "@actions/github": "^5.1.1",
     "@antfu/eslint-config": "^0.39.5",
     "@iconify-json/octicon": "^1.1.30",
     "@iconify-json/ph": "^1.1.4",
@@ -43,12 +41,10 @@
     "async-mutex": "^0.4.0",
     "eslint": "^8.38.0",
     "eslint-plugin-unicorn": "^47.0.0",
-    "execa": "^6.1.0",
     "focus-visible": "^5.2.0",
     "hotkeys-js": "^3.10.1",
     "npm-run-all": "^4.1.5",
     "sass": "^1.57.1",
-    "tsx": "^3.12.3",
     "typescript": "^4.6.4",
     "unplugin-icons": "^0.15.2",
     "vite": "^4.0.0",
