--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "gitification",
-  "version": "1.3.1",
   "type": "module",
+  "version": "1.3.1",
+  "files": [
+    "README.md",
+    "package.json"
+  ],
   "scripts": {
-    "dev": "run-p vite:dev devtools",
+    "dev": "run-p vite:dev",
     "vite:dev": "vite",
     "devtools": "vue-devtools",
     "build": "pnpm run typecheck && vite build",
@@ -13,42 +17,38 @@
   },
   "dependencies": {
     "@tauri-apps/api": "^1.2.0",
-    "@vueuse/core": "^9.12.0",
-    "dayjs": "^1.11.7",
-    "overlayscrollbars": "^2.2.0",
-    "overlayscrollbars-vue": "^0.5.1",
-    "p-all": "^4.0.0",
-    "pinia": "^2.0.29",
+    "@vueuse/core": "^10.7.2",
+    "dayjs": "^1.11.10",
+    "overlayscrollbars": "^2.5.0",
+    "overlayscrollbars-vue": "^0.5.7",
+    "p-all": "^5.0.0",
+    "pinia": "^2.1.7",
     "redaxios": "^0.5.1",
     "tauri-plugin-autostart-api": "github:tauri-apps/tauri-plugin-autostart",
     "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store",
-    "vue": "^3.3.4",
+    "vue": "^3.4.15",
     "vue-selectable-items": "^1.0.1",
     "wowerlay": "1.1.0"
   },
-  "files": [
-    "README.md",
-    "package.json"
-  ],
   "devDependencies": {
-    "@antfu/eslint-config": "^0.39.5",
-    "@iconify-json/octicon": "^1.1.30",
-    "@iconify-json/ph": "^1.1.4",
+    "@antfu/eslint-config": "^2.6.4",
+    "@iconify-json/octicon": "^1.1.52",
+    "@iconify-json/ph": "^1.1.11",
     "@tauri-apps/cli": "^1.2.2",
-    "@types/node": "^18.7.10",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "@vue/devtools": "^6.5.0",
-    "async-mutex": "^0.4.0",
-    "eslint": "^8.38.0",
-    "eslint-plugin-unicorn": "^47.0.0",
+    "@types/node": "^20.11.16",
+    "@vitejs/plugin-vue": "5.0.3",
+    "@vue/devtools": "^7.0.14",
+    "async-mutex": "^0.4.1",
+    "eslint": "^8.56.0",
+    "eslint-plugin-unicorn": "^51.0.1",
     "focus-visible": "^5.2.0",
-    "hotkeys-js": "^3.10.1",
+    "hotkeys-js": "3.13.7",
     "npm-run-all": "^4.1.5",
-    "sass": "^1.57.1",
-    "typescript": "^4.6.4",
-    "unplugin-icons": "^0.15.2",
-    "vite": "^4.0.0",
-    "vite-plugin-checker": "^0.5.5",
-    "vue-tsc": "^1.0.11"
+    "sass": "^1.70.0",
+    "typescript": "^5.3.3",
+    "unplugin-icons": "^0.18.5",
+    "vite": "5.0.12",
+    "vite-plugin-checker": "0.6.4",
+    "vue-tsc": "1.8.27"
   }
 }
