--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -2,7 +2,7 @@
 name = "gitification"
 version = "0.5.0"
 description = "View github notifications on menubar"
-authors = ["Kadir Yazıcı"]
+authors = [ "Kadir Yazıcı" ]
 license = ""
 repository = ""
 edition = "2021"
@@ -15,8 +15,21 @@ tauri-build = { version = "1.2", features = [] }
 
 [dependencies]
 serde_json = "1.0"
-serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.2.4", features = ["dialog-confirm", "http-request", "icon-ico", "icon-png", "macos-private-api", "notification-all", "os-all", "process-exit", "process-relaunch", "shell-open", "system-tray", "updater"] }
+serde = { version = "1.0", features = [ "derive" ] }
+tauri = { version = "1.2.4", features = [
+  "dialog-confirm",
+  "http-request",
+  "icon-ico",
+  "icon-png",
+  "macos-private-api",
+  "notification-all",
+  "os-all",
+  "process-exit",
+  "process-relaunch",
+  "shell-open",
+  "system-tray",
+  "updater"
+] }
 window-vibrancy = "0.3.2"
 tiny_http = "0.12.0"
 ascii = "1.1.0"
@@ -28,10 +41,10 @@ port_scanner = "*"
 [features]
 # by default Tauri runs in production mode
 # when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
-default = ["custom-protocol"]
+default = [ "custom-protocol" ]
 # this feature is used used for production builds where `devPath` points to the filesystem
 # DO NOT remove this
-custom-protocol = ["tauri/custom-protocol"]
+custom-protocol = [ "tauri/custom-protocol" ]
 
 [build]
 target_dir = "./dist-tauri"
