--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
   "name": "gitification",
   "type": "module",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "files": [
     "README.md",
     "package.json"
   ],
   "scripts": {
-    "dev": "run-p vite:dev",
-    "vite:dev": "vite",
+    "dev": "run-p vite:dev devtools",
     "devtools": "vue-devtools",
+    "vite:dev": "vite",
     "build": "pnpm run typecheck && vite build",
     "typecheck": "vue-tsc --noEmit",
     "preview": "vite preview",
     "tauri": "tauri"
   },
   "dependencies": {
-    "@tauri-apps/api": "^1.2.0",
+    "@tauri-apps/api": "^1.5.3",
     "@vueuse/core": "^10.7.2",
     "dayjs": "^1.11.10",
     "overlayscrollbars": "^2.5.0",
@@ -34,10 +34,9 @@
     "@antfu/eslint-config": "^2.6.4",
     "@iconify-json/octicon": "^1.1.52",
     "@iconify-json/ph": "^1.1.11",
-    "@tauri-apps/cli": "^1.2.2",
+    "@tauri-apps/cli": "^1.5.3",
     "@types/node": "^20.11.16",
     "@vitejs/plugin-vue": "5.0.3",
-    "@vue/devtools": "^7.0.14",
     "async-mutex": "^0.4.1",
     "eslint": "^8.56.0",
     "eslint-plugin-unicorn": "^51.0.1",
