--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,22 +1,22 @@
 [package]
 name = "gitification"
-version = "0.5.0"
+version = "1.3.2"
 description = "View github notifications on menubar"
 authors = [ "Kadir Yazıcı" ]
 license = ""
 repository = ""
 edition = "2021"
-rust-version = "1.57"
+rust-version = "1.76"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1.2", features = [] }
+tauri-build = { version = "1.5.1", features = [] }
 
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = [ "derive" ] }
-tauri = { version = "1.2.4", features = ["dialog-confirm", "http-request", "icon-ico", "icon-png", "macos-private-api", "notification-all", "os-all", "process-exit", "process-relaunch", "shell-open", "system-tray", "updater"] }
+tauri = { version = "1.6.1", features = [ "updater", "dialog-confirm", "http-request", "icon-ico", "icon-png", "macos-private-api", "notification-all", "os-all", "process-exit", "process-relaunch", "shell-open", "system-tray"] }
 window-vibrancy = "0.3.2"
 tiny_http = "0.12.0"
 ascii = "1.1.0"
