Add composable for hook management

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tauri-apps/api": "^1.5.3",
     "@vueuse/core": "^10.7.2",
     "dayjs": "^1.11.10",
+    "klona": "^2.0.6",
     "overlayscrollbars": "^2.5.0",
     "overlayscrollbars-vue": "^0.5.7",
     "p-all": "^5.0.0",
@@ -37,6 +38,7 @@
     "@tauri-apps/cli": "^1.5.3",
     "@types/node": "^20.11.16",
     "@vitejs/plugin-vue": "5.0.3",
+    "@vue/devtools": "^7.0.15",
     "async-mutex": "^0.4.1",
     "eslint": "^8.56.0",
     "eslint-plugin-unicorn": "^51.0.1",
