Realized event system is trash, commonCalls is good

--- a/.vscode/settings.default.json
+++ b/.vscode/settings.default.json
@@ -27,8 +27,7 @@
     "markdown",
     "json",
     "jsonc",
-    "yaml",
-    "toml"
+    "yaml"
   ],
   "[rust]": {
     "editor.defaultFormatter": "rust-lang.rust-analyzer"
